# bellhop

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  package-lock.json
.config/: nextest.toml
.github/workflows/: ci.yaml  release.yaml
scripts/: release-linux.nu  release-macos.nu  release-windows.nu
src/: aptly.rs  archive.rs  cli.rs  common.rs  deb.rs  errors.rs  handlers.rs  lib.rs  main.rs  watcher.rs
src/gh/: downloads.rs  mod.rs  releases.rs
tests/: archive_removal_edge_cases_tests.rs  archive_removal_real_world_tests.rs  archive_removal_tests.rs  archive_tests.rs  cli_tools_integration_tests.rs  erlang_integration_tests.rs  github_import_tests.rs  integration_tests.rs  nested_archive_tests.rs  prop_aptly_tests.rs  prop_archive_tests.rs  prop_common_tests.rs  prop_deb_tests.rs  prop_github_tests.rs  publish_tests.rs  repositories_tests.rs  snapshot_consistency_tests.rs  snapshot_idempotency_tests.rs  test_helpers.rs  unit_aptly_tests.rs  unit_archive_tests.rs  unit_cli_tests.rs  unit_common_tests.rs  unit_deb_tests.rs  unit_github_tests.rs  unit_releases_tests.rs  watcher_tests.rs
tests/fixtures/debs/: erlang-asn1-dbgsym_27.3.4.6-1_amd64.deb  erlang-asn1_27.3.4.6-1_amd64.deb
