[package]
name = "bellhop"
version = "1.2.0"
edition = "2024"
rust-version = "1.85.0"
description = "A tool for importing Debian packages into aptly-managed repositories"
license = "Apache-2.0"
repository = "https://github.com/rabbitmq/bellhop"
homepage = "https://github.com/rabbitmq/bellhop"
keywords = ["debian", "aptly", "package-management"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
chrono = "0.4"
thiserror = "2"
tar = "0.4"
flate2 = "1.0"
log = "0.4"
fern = "0.7"
tempfile = "3"
zip = "6"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
proptest = "1"
